# address_bundler

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
SPECS/: project_summary_mode.md  signs_input.md  signs_validate.md
address_bundler/: __init__.py  cluster.py  create-csv.py  db.py  fix_addresses.py  geocode.py  import_file.py  main.py  maps.py  models.py  pdfs.py  project.py  summary.py  summary_formatter.py
common/: bootstrap.py  database_init.py  database_manager.py  db.py  main.py  migrate_add_cropping_status.py  models.py  project.py  project_manager.py  summary.py
lawn_signs/: PRD.txt  TASKS.txt  __init__.py  auto_crop.py  import_photos.py  main.py  summary.py  template.py  validate.py
tasks/: prd-auto-crop.md  prd-database-initialization-refactor.md  tasks-prd-auto-crop.md  tasks-prd-database-initialization-refactor.md
test-data/: fake-student-addresses.csv  washout-template.json
test-data/washout-hs/: photos.csv  photos_with_name_changes.csv
tests/: test_auto_crop.py  test_database_management.py  test_import_photos.py  test_import_photos_fuzzy.py  test_summary.py  test_summary_formatter.py  test_template.py  test_validate.py
