[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "address_bundler"
version = "0.1.0"
description = "Sort addresses into geographically grouped bundles"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Matt King", email = "kyrrigle@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "docopt",
  "icecream",
  "python-dotenv",
  "scikit-learn",
  "numpy",
  "geopy",
  "pdfplumber",
  "fuzzywuzzy",
  "prettytable",
  "reportlab",
  "peewee",
  "PyYAML",
  "tqdm",
  "py-staticmaps[cairo]",
  "Pillow<10.0",
  "usaddress",
  "scipy (>=1.11)",
  "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[project.scripts]
ab = "address_bundler.main:main"
address-bundler = "address_bundler.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
